--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -5,3 +5,7 @@ builds:
       - -H=windowsgui
 archives:
 - format: binary
+  name_template: "{{ .ProjectName }}-{{ .Arch }}-v{{.Version}}"
+  replacements:
+    386: x86
+    amd64: x64
