--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,15 +44,17 @@ jobs:
     - name: go generate (Binary Version Information and Icon)
       run: go generate
     - name: Build-only (GoReleaser)
-      uses: goreleaser/goreleaser-action@v2
       if: "!startsWith(github.ref, 'refs/tags/')"
+      uses: goreleaser/goreleaser-action@v2
       with:
         distribution: goreleaser
         version: latest
         args: release --snapshot --skip-publish --rm-dist
     - name: Publish (GoReleaser)
-      uses: goreleaser/goreleaser-action@v2
       if: startsWith(github.ref, 'refs/tags/')
+      uses: goreleaser/goreleaser-action@v2
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         distribution: goreleaser
         version: latest
