--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,10 +1,8 @@
 name: Release
 on:
-  workflow_dispatch: 
-    inputs:
-      tag:
-        description: "Tag name for the release (e.g. v1.0.0)"
-        required: true
+  push:
+    tags:
+      - "v*"
 
 jobs:
 
@@ -32,4 +30,3 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GHR_PATH: build/
           GHR_COMPRESS: zip
-          GITHUB_REF: refs/tags/${{ github.event.inputs.tag }}
