--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,7 +49,9 @@ jobs:
       with:
         distribution: goreleaser
         version: latest
-        args: release --snapshot --skip-publish --rm-dist
+        args: release --snapshot --rm-dist
+      env:
+        GORELEASER_SKIP_PUBLISH: true
     - name: Publish release (GoReleaser)
       if: startsWith(github.ref, 'refs/tags/')
       uses: goreleaser/goreleaser-action@v2
