--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,8 +48,8 @@ jobs:
       uses: goreleaser/goreleaser-action@v2
       with:
         distribution: goreleaser
-        version: latest
-        args: release --snapshot --rm-dist
+        version: v2.12.0
+        args: release --snapshot
       env:
         GORELEASER_SKIP_PUBLISH: true
     - name: Publish release (GoReleaser)
@@ -59,5 +59,7 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         distribution: goreleaser
-        version: latest
-        args: release --rm-dist
+        version: v2.12.0
+        args: release
+      env:
+        GORELEASER_SKIP_PUBLISH: true
