--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -1,11 +1,23 @@
+project_name: RectangleWin
+
 builds:
-  - goos:
+  - id: windows_build
+    goos:
       - windows
+    goarch:
+      - 386
+      - amd64
     ldflags:
       - -H=windowsgui
+    env:
+      - CGO_ENABLED=0
+
 archives:
-- format: binary
-  name_template: "{{ .ProjectName }}-{{ .Arch }}-v{{.Version}}"
-  replacements:
-    386: x86
-    amd64: x64
+  - id: default
+    builds:
+      - windows_build
+    format: binary
+    name_template: "{{ .ProjectName }}-{{ .Arch }}-v{{ .Version }}"
+    replacements:
+      386: x86
+      amd64: x64
